log in page and register page completed

--- a/about.html
+++ b/about.html
@@ -196,8 +196,8 @@
       " style="padding-left: 4%;">
           <h3>AdShoe</h3>
           <p>"The finest shoes in Town"</p>
-          <a href="#"><span><i class="fa fa-facebook fa-md"></i></span></a>
-          <a href="#"><span><i class="fa fa-linkedin fa-md"></i></span></a>
+          <a href="www.facebook.com"><span><i class="fa fa-facebook fa-md"></i></span></a>
+          <a href="www.linkedin.com"><span><i class="fa fa-linkedin fa-md"></i></span></a>
       </div>
       <div class="col-md-4">
           <ul>
