added the relation on Buy

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="col-md-4
       " style="padding-left: 4%;">
           <h3>AdShoe</h3>
-          <p>"The finest shoes in"</p>
+          <p>"The finest shoes in Town"</p>
           <a href="#"><span><i class="fa fa-facebook fa-md"></i></span></a>
           <a href="#"><span><i class="fa fa-linkedin fa-md"></i></span></a>
       </div>
